# Bulk_upload_django

./: db.sqlite3  pyproject.toml
core/: settings.py  urls.py
datacollection/: admin.py  forms.py  models.py  urls.py  views.py
datacollection/migrations/: 0001_initial.py  0002_userfile.py
datacollection/templates/: random_image.html  success.html  upload_images.html
images/user_files/: project_1  pyproject.toml
